--- a/web/package.json
+++ b/web/package.json
@@ -1,41 +1,26 @@
 {
-	"name": "tiny-roger-web",
+	"name": "tiny-roger-sveltekit",
+	"version": "0.0.1",
 	"private": true,
-	"version": "0.1.0",
-	"type": "module",
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^1.0.2",
-		"@tsconfig/svelte": "^3.0.0",
-		"tiny-roger-indexer": "0.1.0",
-		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.1",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.1",
-		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0",
-		"vite-tsconfig-paths": "^3.5.1"
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0"
 	},
-	"dependencies": {
-		"@ethersproject/abstract-provider": "^5.7.0",
-		"@ethersproject/providers": "^5.7.0",
-		"ethereum-indexer": "^0.3.3",
-		"named-logs": "^0.2.0",
-		"named-logs-console": "^0.2.1",
-		"svelte-json-tree": "^1.0.0",
-		"sveltore": "^0.0.2",
-		"tinro": "^0.6.12",
-		"twgl.js": "^5.0.4"
-	},
+	"type": "module",
 	"scripts": {
-		"format": "prettier --check \"**/*.{ts,js,sol}\"",
-		"format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
-		"dev": "vite",
-		"build": "vite build && node make-static.cjs info",
+		"dev": "vite dev",
+		"build": "vite build",
 		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"serve": "ipfs-emulator --only -d dist -p 8080"
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check .",
+		"format": "prettier --plugin-search-dir . --write ."
 	}
 }
