--- a/web/package.json
+++ b/web/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "tiny-roger-sveltekit",
+	"name": "jolly-roger-web",
 	"version": "0.0.1",
+	"description": "Frontend for jolly-roger.",
 	"private": true,
 	"devDependencies": {
-		"@skeletonlabs/skeleton": "^0.124.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.7",
+		"daisyui": "^2.18.1",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.4",
@@ -31,5 +31,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"dependencies": {
+		"theme-change": "^2.3.0"
 	}
 }
