--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
 	"description": "Frontend for jolly-roger.",
 	"private": true,
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
