--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.7",
 		"daisyui": "^2.18.1",
+		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.4",
@@ -30,7 +31,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"serve": "ipfs-emulator --only -d build -p 8080"
 	},
 	"dependencies": {
 		"theme-change": "^2.3.0"
