--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -34,4 +34,4 @@ jobs:
           NFT_STORAGE_API_TOKEN: ${{ secrets.NFT_STORAGE_API_TOKEN }}
         run: upload-to-ipfs web/build >> "$GITHUB_OUTPUT"
       - name: echo CID
-        run: 'echo "Here is the URL: https://${{ steps.cid.outputs.CID }}.dweb.link"'
+        run: 'echo "Here is the URL: https://${{ steps.cid.outputs.CID }}.ipfs.dweb.link"'
