--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -3,6 +3,11 @@ on:
   - push
   - pull_request
 
+env:
+  ENS_NAME: ${{ vars.ENS_NAME }}
+  NFT_STORAGE_API_TOKEN: ${{ secrets.NFT_STORAGE_API_TOKEN }}
+  DWEBSERVICE_API_TOKEN: ${{ secrets.DWEBSERVICE_API_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -30,8 +35,8 @@ jobs:
         run: pnpm add -g upload-to-ipfs@0.0.4
       - name: deploy to ipfs
         id: cid
-        env:
-          NFT_STORAGE_API_TOKEN: ${{ secrets.NFT_STORAGE_API_TOKEN }}
         run: upload-to-ipfs web/build >> "$GITHUB_OUTPUT"
       - name: echo CID
         run: 'echo "Here is the URL: https://${{ steps.cid.outputs.CID }}.ipfs.dweb.link"'
+      - name: IPNS update
+        run: 'curl "https://dwebservices.xyz/api/eth-names-ipns/$ENS_NAME/publish_by_name/${{ steps.cid.outputs.CID }}/" -H "Authorization: Bearer $DWEBSERVICE_API_TOKEN"'
