get rid of prepare-for-web and index.template.html

--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,9 @@
 		"ipfs-gateway-emulator": "4.2.1-ipfs.2",
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
-		"prepare-for-web": "^0.2.0",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.8.1",
+		"pwag": "^0.0.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^4.10.7",
@@ -27,9 +27,9 @@
 	},
 	"type": "module",
 	"scripts": {
-		"prepare": "prepare-for-web --config src/web-config.json --target static --targetFile src/app.html",
+		"prepare": "pwag static/icon.svg src/web-config.json",
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "npm run prepare && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
