--- a/web/src/web-config.json
+++ b/web/src/web-config.json
@@ -2,19 +2,14 @@
 	"name": "Jolly Roger",
 	"title": "Jolly Roger - Template for Decentralised Applications.",
 	"description": "Build and Deploy for Eternity. Jolly Roger is a production-ready template for decentralised applications.",
-	"developerName": "Ronan Sandford",
-	"developerURL": "https://ronan.eth.limo",
-	"url": "https://jolly-roger.eth.limo",
-	"ensName": "jolly-roger.eth",
-	"background": "#000000",
-	"theme_color": "#000000",
+	"canonicalURL": "https://jolly-roger.eth.limo",
+	"ENSName": "jolly-roger.eth",
+	"themeColor": "#000000",
 	"appleStatusBarStyle": "black-translucent",
-	"display": "fullscreen",
 	"icon": "static/icon.svg",
-	"offlineCache": false,
-	"maskable_icons": [
+	"maskableIcons": [
 		{
-			"src": "maskable_icon_512x512.png",
+			"src": "../maskable_icon_512x512.png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
