--- a/packages/1193/package.json
+++ b/packages/1193/package.json
@@ -39,5 +39,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"dependencies": {
+		"named-logs": "^0.2.1"
 	}
 }
