--- a/packages/1193/package.json
+++ b/packages/1193/package.json
@@ -35,7 +35,8 @@
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"web3w-portis-loader": "^0.3.3"
 	},
 	"scripts": {
 		"dev": "vite dev",
