--- a/packages/1193/package.json
+++ b/packages/1193/package.json
@@ -36,7 +36,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
-		"web3w-portis-loader": "^0.3.3"
+		"web3w-walletconnect-loader": "^0.4.3"
 	},
 	"scripts": {
 		"dev": "vite dev",
