--- a/packages/1193/package.json
+++ b/packages/1193/package.json
@@ -30,7 +30,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"publint": "^0.1.9",
 		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte-check": "^3.0.3",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
@@ -47,7 +47,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"svelte-check": "svelte-check"
 	},
 	"dependencies": {
 		"named-logs": "^0.2.1"
