--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
 	"name": "jolly-roger-web",
 	"version": "0.0.1",
 	"description": "Frontend for jolly-roger.",
+	"type": "module",
 	"private": true,
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^2.0.1",
@@ -25,7 +26,12 @@
 		"typescript": "^4.9.5",
 		"vite": "^4.1.4"
 	},
-	"type": "module",
+	"dependencies": {
+		"named-logs": "^0.2.1",
+		"theme-change": "^2.3.0",
+		"web3-connection": "workspace:*",
+		"web3w-walletconnect-loader": "^0.4.3"
+	},
 	"scripts": {
 		"prepare": "pwag static/icon.svg src/web-config.json",
 		"dev": "vite dev",
@@ -35,10 +41,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"svelte-check": "svelte-check",
 		"serve": "ipfs-emulator --only -d build -p 8080"
-	},
-	"dependencies": {
-		"named-logs": "^0.2.1",
-		"theme-change": "^2.3.0"
 	}
 }
