build web3-connection deps

--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -27,6 +27,8 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: build web3-connection, needed by web
+        run: pnpm run --filter web3-connection build
       - name: build web
         run: pnpm run --filter ./web build
       # - name: deploy web
