--- a/packages/web3-connection/package.json
+++ b/packages/web3-connection/package.json
@@ -42,6 +42,7 @@
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
+		"package:dev": "svelte-kit sync && svelte-package --watch",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
