--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git checkout main
-          git merge -X theirs ${{ GITHUB_REF_NAME }}
+          git checkout main-test
+          git merge -X theirs ${{ vars.GITHUB_REF_NAME }}
           rm web/TODO.md
           git add -A
           git commit -m "update"
