--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          echo "checking out ${{ github.ref_name }}"
+          git checkout ${{ github.ref_name }}
+          echo "fetching..."
+          git fetch
           echo "merging ${{ github.ref_name }}..."
           git merge -X theirs ${{ github.ref_name }}
           git status | cat
