--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: push stripped down version to main
 on: push
 jobs:
-  build:
+  update:
+    if: github.ref == 'refs/heads/wip'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,10 +14,12 @@ jobs:
           echo "fetching ${{ github.ref_name }}..."
           git fetch origin ${{ github.ref_name }}:${{ github.ref_name }}
           echo "merging ${{ github.ref_name }}..."
-          git merge --no-commit --allow-unrelated-histories -X theirs ${{ github.ref_name }} 
+          git merge --no-ff --no-commit --allow-unrelated-histories -X theirs ${{ github.ref_name }} 
           git status | cat
           rm web/TODO.md
           rm -Rf .web/
+          rm -Rf .github/
+          # TODO more
           git add -A
-          git commit -m "update"
+          git commit -m "Merge ${{ github.ref_name }} in"
           git push --force
