--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build_and_deploy:
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/public'
     runs-on: ubuntu-20.04
     strategy:
       matrix:
